--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-# Maia-s-Cupcake-Factory-
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1>Maia's CupCake Factory</h1>
+
+<p>Best CupCakes In Town.</p>
+
+</body>
+</html>
