--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 
 <h1>Maia's CupCake Factory</h1>
-<h2>CupCake World.</h2>
+<h2>CupCake World..</h2>
 <p>Best CupCakes in town.</p>
 
 </body>
