--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
-<body>
+<head>
+  <title>Maia-s-Cupcakes-Factory-</title>
+</head>
+  
+  <body>
 
 <h1>Maia's CupCake Factory</h1>
 <h2>CupCake World..</h2>
