--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-
+<head>
+<head>
+  <title>Maia-s-Cupcake-Factory-</title>
+  </head>
   <body>
 
 <h1>Maia's CupCake Factory</h1>
