--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
           <li><a href="#">Annual Budget</a></li>
         </ul>
       </li>
-      <li><a href="#">Page 2</a></li>
-      <li><a href="#">Page 3</a></li>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Gallery</a></li>
     </ul>
   </div>
 </nav>
