--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="#">Home</a></li>
-      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
+      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Contacts<span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="#">The CEO</a></li>
           <li><a href="#">Services Offered</a></li>
