--- a/index.html
+++ b/index.html
@@ -23,15 +23,17 @@
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="#">Home</a></li>
-      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Contacts<span class="caret"></span></a>
+      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">About Us<span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="#">The CEO</a></li>
           <li><a href="#">Services Offered</a></li>
           <li><a href="#">Annual Budget</a></li>
         </ul>
       </li>
-      <li><a href="#">About Us</a></li>
       <li><a href="#">Gallery</a></li>
+      <li><a href="#">Recipes</a></li>
+      <li><a href="#">Contacts</a></li>
+      <li><a href="#">Map</a></li>
     </ul>
   </div>
 </nav>
